# turf

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproj.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_test.yml  test_suite.yml
docs/: whitepaper.md
examples/: example.ipynb  nfl.ipynb  nfl_example.ipynb  nfl_sos.ipynb  nhl.ipynb  nhl_sos.ipynb  sos.ipynb
seasons/: nfl_week.py
seasons/nfl_2024_week10/: nfl_2024_week10_2024_11_10_data.csv  nfl_2024_week10_2024_11_10_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week11/: nfl_2024_week11_2024_11_17_data.csv  nfl_2024_week11_2024_11_17_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week12/: nfl_2024_week12_2024_11_24_data.csv  nfl_2024_week12_2024_11_24_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week13/: nfl_2024_week13_2024_12_01_data.csv  nfl_2024_week13_2024_12_01_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week14/: nfl_2024_week14_2024_12_08_data.csv  nfl_2024_week14_2024_12_08_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week15/: nfl_2024_week15_2024_12_15_data.csv  nfl_2024_week15_2024_12_15_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week17/: nfl_2024_week17_2024_12_29_data.csv  nfl_2024_week17_2024_12_29_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week18/: nfl_2024_week18_2025_01_05_data.csv  nfl_2024_week18_2025_01_05_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week7/: nfl_2024_week7_2024_10_20_data.csv  nfl_2024_week7_2024_10_20_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week8/: nfl_2024_week8_2024_10_27_data.csv  nfl_2024_week8_2024_10_27_sims.csv  posterior_metrics.csv
seasons/nfl_2024_week9/: nfl_2024_week9_2024_11_03_data.csv  nfl_2024_week9_2024_11_03_sims.csv  posterior_metrics.csv
src/turf/: __init__.py  bet.py  inference.py  scrape.py  utils.py
src/turf/data/: __init__.py  nfl_sample.csv  nhl_sample.csv
src/turf/tests/: test_import.py  test_team_name_parser.py
src/turf/tests/test_data/: nhl_sample.csv
tests/: test_bet.py  test_bet_conversion.py  test_build_model.py  test_implied_prob.py  test_kelly.py  test_scrape.py  test_simulation.py  test_team_name_parser.py
turf/: __init__.py  inference.py  scrape.py  utils.py
turf/tests/: test_build_model.py  test_import.py  test_scrape.py  test_simulation.py  test_team_name_parser.py
