[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "turf"
version = "0.9.1"
dynamic = ["readme"]
authors = [{name = "David P. Fleming", email = "dpfleming91@gmail.com"}]
maintainers = [{name = "David P. Fleming", email = "dpfleming91@gmail.com"}]
description = "NFL and NHL Hierarchical Monte Carlo inference and game simulation"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = ['Development Status :: 4 - Beta',
               'Programming Language :: Python :: 3.10',
               'Programming Language :: Python :: 3.11',
               'Programming Language :: Python :: 3.12',
               'License :: OSI Approved :: MIT License',
               'Operating System :: OS Independent']
dependencies = ['numpy',
                'pandas',
                'pymc>5',
                'arviz',
                'mechanicalsoup',
                'beautifulsoup4',
                'lxml',
                'pytest',
                'coverage']
keywords = ['hierarchical', 'bayesian', 'football', 'hockey', 'inference', 'monte carlo', 'simulation']

[project.optional-dependencies]
vis = ['matplotlib',
       'seaborn']

[project.urls]
Homepage = 'https://github.com/dflemin3/turf'
Issues = 'https://github.com/dflemin3/turf/issues'
Documentation = "https://github.com/dflemin3/turf/blob/main/docs/whitepaper.md"
Repository = "https://github.com/dflemin3/turf.git"

[tool.setuptools]
include-package-data = true
package-data = {"turf.data" = ["*.nc", "*.csv"]}

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
minversion = "0.0"
python_files = ["tests/test_*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["def __repr__",
                "if __name__ == .__main__.:",
                "def pull_nfl_full_season_games_raw",
                "def pull_nhl_full_season_games_raw",
                "def save",
                "raise NotImplementedError"]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"